test_suite/tests/ui/inject_constructor/invalid_types.stderr
error[E0308]: arguments to this function are incorrect
  --> tests/ui/inject_constructor/invalid_types.rs:3:10
   |
3  | #[derive(Inject)]
   |          ^^^^^^
   |          |
   |          expected `i32`, found `String`
   |          expected `String`, found `i32`
   |
note: associated function defined here
  --> tests/ui/inject_constructor/invalid_types.rs:11:12
   |
11 |     pub fn new(b: i32, a: String) -> Self {
   |            ^^^ ------  ---------
   = note: this error originates in the derive macro `Inject` (in Nightly builds, run with -Z macro-backtrace for more info)
help: swap these arguments
   |
3  | #[derive(Inject(Inject, Inject))]
   |          ~~~~~~~~~~~~~~~~~~~~~~
